// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Aggregator styles should render and match snapshot when open 1`] = `
HTMLCollection [
  .circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #999999;
}

.circuit-2:hover {
  color: #E6E6E6;
}

.circuit-0 {
  margin-left: 12px;
}

<div
    class="circuit-2"
    data-testid="aggregator"
  >
    default-icon
    <div
      class="circuit-0 circuit-1"
    >
      Aggregator
    </div>
  </div>,
  .circuit-0 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
  height: calc(32px * );
  position: relative;
  opacity: 1;
  visibility: visible;
  -webkit-transition: height 120ms ease-in-out,opacity 120ms ease-in-out 100ms,visibility 120ms ease-in-out 100ms;
  transition: height 120ms ease-in-out,opacity 120ms ease-in-out 100ms,visibility 120ms ease-in-out 100ms;
}

.circuit-0::after {
  content: '';
  width: 2px;
  background: #3063E9;
  height: 32px;
  border-radius: 1px;
  position: absolute;
  top: calc(32px * 0);
  -webkit-transition: top 120ms ease-in-out;
  transition: top 120ms ease-in-out;
}

.circuit-0::before {
  content: '';
  width: 2px;
  background: #333333;
  height: calc(32px * );
  position: absolute;
  top: 0;
  border-radius: 1px;
}

<ul
    class="circuit-0 circuit-1"
  >
    <div
      data-testid="child"
    >
      child
    </div>
  </ul>,
]
`;

exports[`Aggregator styles should render with default styles 1`] = `
HTMLCollection [
  .circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #999999;
}

.circuit-2:hover {
  color: #E6E6E6;
}

.circuit-0 {
  margin-left: 12px;
}

<div
    class="circuit-2"
    data-testid="aggregator"
  >
    default-icon
    <div
      class="circuit-0 circuit-1"
    >
      Aggregator
    </div>
  </div>,
  .circuit-0 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
}

.circuit-0::after {
  content: '';
  width: 2px;
  background: #3063E9;
  height: 32px;
  border-radius: 1px;
  position: absolute;
  top: calc(32px * 0);
  -webkit-transition: top 120ms ease-in-out;
  transition: top 120ms ease-in-out;
}

.circuit-0::before {
  content: '';
  width: 2px;
  background: #333333;
  height: calc(32px * );
  position: absolute;
  top: 0;
  border-radius: 1px;
}

<ul
    class="circuit-0 circuit-1"
  >
    <div
      data-testid="child"
    >
      child
    </div>
  </ul>,
]
`;

exports[`Aggregator styles should render with disabled state styles and match the snapshot 1`] = `
.circuit-0 {
  margin-left: 12px;
}

.circuit-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  height: auto;
  margin: 16px;
  padding: 4px;
  cursor: pointer;
  color: #999999;
  cursor: not-allowed;
  color: #333333;
}

<div
  class="circuit-2"
  data-testid="aggregator"
  disabled=""
>
  <svg
    fill="none"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 10V7c0-1.031.421-2.132 1.172-2.861A4.059 4.059 0 0112 3c1.06 0 2.078.41 2.828 1.139C15.578 4.869 16 5.969 16 7v3M5 11h14v10H5z"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
    />
  </svg>
  <div
    class="circuit-0 circuit-1"
  >
    Aggregator
  </div>
</div>
`;
